# cg-renderer-visitor-pattern

./: CG-Assignment-01.kdev4  CMakeLists.txt  README.md
.kdev4/: CG-Assignment-01.kdev4  CG.kdev4  _custom.kdev4
ac3d_models/: SubdividedDragon.ac  amp.ac  car.ac  celtic12.ac  diningtable.ac  enterprise.ac  falcon.ac  glider.ac  gym2.ac  head.ac  mydesk4.ac  racecar.ac  rocket.ac  rose.ac  ship.ac  subdivided hand.ac  sword.ac  tie3.ac  tree.ac  tuxedo.ac  world.ac
headers/: color.h  geometry.h  group.h  material.h  node.h  reader.h  rendervisitor.h  scenegraph.h  texture.h  transform.h  visitor.h
impl/: color.cpp  geometry.cpp  group.cpp  main.cpp  mainfile.cpp  material.cpp  node.cpp  reader.cpp  rendervisitor.cpp  scenegraph.cpp  texture.cpp  transform.cpp  visitor.cpp
